<resources>
    <string name="app_name">Audio Recorder with Bookmark</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="nextBookmark">Next Bookmark</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="previousBookmark">Previous Bookmark</string>
    <string name="startRecording">Start Recording</string>
    <string name="bookmark">Bookmark</string>
    <string name="stopRecording">Stop Recording</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="delete">Delete</string>
    <string name="confirmAction">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="recording_header">Recording</string>

    <!-- Recording Preferences -->
    <string name="bookmarkOffset_title">Bookmark Offset (Seconds)</string>
    <string name="bookmarkOffset_key">bookmarkOffsetSeconds</string>
    <string name="bookmarkOffset_summary"></string>
    <string name="bookmarkPromptNote_title">Add Note After Bookmarking</string>
    <string name="bookmarkPromptNote_key">bookmarkPromptNote</string>
    <string name="bookmarkPromptNote_summary"></string>
    <string name="settings">Settings</string>

    <string name="title_activity_recordings">Recordings</string>
    <string name="title_activity_record">Record</string>
    <string name="title_activity_play">Play</string>
    <string name="add">Add</string>
    <string name="addNote">Add Note</string>
    <string name="cancel">Cancel</string>
</resources>
